fixed text wrap and code scrollbar

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -2,9 +2,8 @@
     color: var(--main-text-color);
     background-color: var(--main-app-bg-color);
     font-family: Arial, sans-serif;
-    text-wrap: normal;
+    text-wrap: wrap;
 }
-
 
 body {
     width: 100vw;
@@ -329,7 +328,7 @@ body {
     width: 90%;
     background-color: #202030;
     overflow: hidden;
-    text-wrap: normal;
+    text-wrap: wrap;
     word-break: break-word;
     hyphens: auto;
 }
@@ -384,7 +383,6 @@ body {
     max-width: 100%;
     overflow: hidden;
     overflow-x: auto;
-    text-wrap: normal;
     word-break: break-word;
     hyphens: auto;
     white-space: pre;
@@ -400,10 +398,16 @@ body {
 
 .code-block {
     display: block;
+    text-wrap: nowrap;
+}
+
+.code-block * {
+    text-wrap: nowrap;
 }
 
 .code-span {
     display: inline;
+    text-wrap: wrap;
 }
 
 .chat-entry-reply {
@@ -417,3 +421,25 @@ body {
 #main-chat-info-header {
     padding: 5px;
 }
+
+/*Change the scrollbar*/
+.code-block::-webkit-scrollbar {
+    height: calc(var(--main-chat-selector-scroll-size));
+}
+
+/*Change the scrollbar track*/
+.code-block::-webkit-scrollbar-track {
+    background-color: var(--main-chat-selector-scroll-bg);
+}
+
+/*Change the scrollbar thumb*/
+.code-block::-webkit-scrollbar-thumb {
+    background-color: var(--main-chat-selector-scroll-color);
+    border-radius: var(--main-chat-selector-scroll-size);
+}
+
+/*Change the scrollbar thumb on hover*/
+.code-block::-webkit-scrollbar-thumb:hover {
+    background-color: white; /*var(--main-chat-selector-scroll-color-hover);*/
+}
+
